--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ dta.exe
 ti.exe
 singleplayer.exe
 tsclientgame.exe
+dtagame.exe
+tigame.exe
+togame.exe
 # *local* configuration file, seriously
 config.mk
 custom.mk
