Fix GitHub workflow output EXE capitalization to be consistent with build scripts

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -78,19 +78,19 @@ jobs:
         
         gmake clean
         gmake -j8 ${{ matrix.type }}=1
-        Move-Item -Path 'game.exe' -Destination 'build\release\Game.exe'
+        Move-Item -Path 'game.exe' -Destination 'build\release\game.exe'
         
         New-Item -Path 'build\debug' -ItemType Directory
         
         gmake clean
         gmake -j8 ${{ matrix.type }}=1 WWDEBUG=1
-        Move-Item -Path 'game.exe' -Destination 'build\debug\Game.exe'
+        Move-Item -Path 'game.exe' -Destination 'build\debug\game.exe'
         
         New-Item -Path 'build\vinifera' -ItemType Directory
         
         gmake clean
         gmake -j8 ${{ matrix.type }}=1 VINIFERA=1
-        Move-Item -Path 'game.exe' -Destination 'build\vinifera\Game.exe'
+        Move-Item -Path 'game.exe' -Destination 'build\vinifera\game.exe'
         
         Get-ChildItem -Path 'build\release'
         Get-ChildItem -Path 'build\debug'
@@ -102,9 +102,9 @@ jobs:
         New-Item -Path 'artifact\debug' -ItemType Directory
         New-Item -Path 'artifact\vinifera' -ItemType Directory
         
-        Move-Item -Path 'build\release\Game.exe' -Destination 'artifact\release\Game.exe'
-        Move-Item -Path 'build\debug\Game.exe' -Destination 'artifact\debug\Game.exe'
-        Move-Item -Path 'build\vinifera\Game.exe' -Destination 'artifact\vinifera\Game.exe'
+        Move-Item -Path 'build\release\game.exe' -Destination 'artifact\release\game.exe'
+        Move-Item -Path 'build\debug\game.exe' -Destination 'artifact\debug\game.exe'
+        Move-Item -Path 'build\vinifera\game.exe' -Destination 'artifact\vinifera\game.exe'
         
         Get-ChildItem -Path 'artifact\release'
         Get-ChildItem -Path 'artifact\debug'
