Removed debug builds from artifacts.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -80,11 +80,11 @@ jobs:
         gmake -j8 ${{ matrix.type }}=1
         Move-Item -Path 'game.exe' -Destination 'build\release\game.exe'
         
-        New-Item -Path 'build\debug' -ItemType Directory
+        # New-Item -Path 'build\debug' -ItemType Directory
         
-        gmake clean
-        gmake -j8 ${{ matrix.type }}=1 WWDEBUG=1
-        Move-Item -Path 'game.exe' -Destination 'build\debug\game.exe'
+        # gmake clean
+        # gmake -j8 ${{ matrix.type }}=1 WWDEBUG=1
+        # Move-Item -Path 'game.exe' -Destination 'build\debug\game.exe'
         
         New-Item -Path 'build\vinifera' -ItemType Directory
         
@@ -93,21 +93,21 @@ jobs:
         Move-Item -Path 'game.exe' -Destination 'build\vinifera\game.exe'
         
         Get-ChildItem -Path 'build\release'
-        Get-ChildItem -Path 'build\debug'
+        # Get-ChildItem -Path 'build\debug'
         Get-ChildItem -Path 'build\vinifera'
         
     - name: Copy Binaries
       run: |      
         New-Item -Path 'artifact\release' -ItemType Directory
-        New-Item -Path 'artifact\debug' -ItemType Directory
+        # New-Item -Path 'artifact\debug' -ItemType Directory
         New-Item -Path 'artifact\vinifera' -ItemType Directory
         
         Move-Item -Path 'build\release\game.exe' -Destination 'artifact\release\game.exe'
-        Move-Item -Path 'build\debug\game.exe' -Destination 'artifact\debug\game.exe'
+        # Move-Item -Path 'build\debug\game.exe' -Destination 'artifact\debug\game.exe'
         Move-Item -Path 'build\vinifera\game.exe' -Destination 'artifact\vinifera\game.exe'
         
         Get-ChildItem -Path 'artifact\release'
-        Get-ChildItem -Path 'artifact\debug'
+        # Get-ChildItem -Path 'artifact\debug'
         Get-ChildItem -Path 'artifact\vinifera'
         
         Get-ChildItem
